# SR-RoboticHanoiTower

./: .gitignore  .gitmodules  README.md  notes.md
src/hanoi_tower/: README.md  package.xml  setup.cfg  setup.py
src/hanoi_tower/config/: hanoi_params.yaml
src/hanoi_tower/hanoi_tower/: __init__.py  hanoi_solver.py  motion_executor.py  vision_node.py
src/hanoi_tower/launch/: demo.launch.py  hanoi_nodes.launch.py  hanoi_robot_gazebo.launch.py  xarm_hanoi_init.launch.py
src/hanoi_tower/models/camera/: model.config  model.sdf
src/hanoi_tower/models/cube_large/: model.config  model.sdf
src/hanoi_tower/models/cube_large/materials/scripts/: aruco.material
src/hanoi_tower/models/cube_medium/: model.config  model.sdf
src/hanoi_tower/models/cube_medium/materials/scripts/: aruco.material
src/hanoi_tower/models/cube_small/: model.config  model.sdf
src/hanoi_tower/models/cube_small/materials/scripts/: aruco.material
src/hanoi_tower/rviz/: hanoi.rviz
src/hanoi_tower/urdf/: camera.urdf
src/hanoi_tower/worlds/: hanoi_simple.world
