<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hanoi_tower</name>
  <version>0.0.1</version>
  <description>Tower of Hanoi using xArm6 robot</description>
  <maintainer email="shankhoghosh123@gmail.com">boron</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <depend>xarm_msgs</depend>
  <depend>xarm_api</depend>
  <depend>xarm_planner</depend>
  <depend>xarm_moveit_config</depend>
  <depend>xarm_description</depend>
  <depend>xarm_gazebo</depend>

  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <depend>moveit_ros_planning_interface</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
